[tool.poetry]
name = "nudecrawler"
version = "0.1.0"
description = ""
authors = ["Yaroslav Polyakov <yaroslaff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.0"
transliterate = "^1.10.2"
pillow = "^9.4.0"
requests = "^2.28.2"
nudepy = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
